Manifold core and ext changes - Added ``@JailBreak` feature.  Gain direct, type-safe access to otherwise inaccessible classes/methods/fields.  Annotate the type on a variable, parameter, or new expression with `@JailBreak` to avoid the drudgery and vulnerability of Java reflection:   `@JailBreak Foo foo = getFoo(); foo.privateMethodOnFoo();` - Added jailbreak() extension method to Object.  Use it like @JailBreak but directly in an expression:   `foo.jailbreak().privateMethodOnFoo()` - Also fixed https://github.com/manifold-systems/manifold/issues/31 - Smaller fixes/refactors